Refactor company exemptions delete behaviour
* Update method to check against deltaAt fields
* Update method to still process delete even when not locatable
* Add method to DateUtils to check stale deltas
* Update unit and integration tests